--- a/.github/workflows/spark_app.yml
+++ b/.github/workflows/spark_app.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Apache Spark App
+name: Apache-Spark-App
 
 # Controls when the workflow will run
 on:
@@ -26,11 +26,11 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Print test message
+        run: echo "Hello, world! from Buitd"
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install nginx
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo Install nginx,
+          eapt install nginx -y
