--- a/.github/workflows/spark_app.yml
+++ b/.github/workflows/spark_app.yml
@@ -1,34 +1,36 @@
-# This is a basic workflow to help you get started with Actions
+name: Spark CI/CD
 
-name: Apache-Spark-App
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  my_testing:
-    # The type of runner that the job will run on
+  build:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Print test message
-        run: echo "Hello, world! from Build"
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Copy custom code
+      run: |
+        # Copy code from custom_folder into the source folder
+        cp -r custom_folder/* src/
         
-  my_deploy:
-    runs-on: ubuntu-latest  
-    steps: 
-      - name: Install nginx
-        run: 
-          echo Install nginx
-          sudo apt install nginx -y
+    - name: Set up Spark environment
+      run: |
+        # Install Spark and dependencies here
+        # You can use Apache Spark's official Docker image or install it manually
+        # Example: docker pull apache/spark
+        # Example: Download and install Spark manually
+
+    - name: Build and test Spark app
+      run: |
+        # Build and test your Spark application here
+        # Example: sbt clean package
+
+    - name: Deploy to ArgoCD
+      run: |
+        # Use ArgoCD CLI or API to trigger deployment
+        # Example: argocd app sync my-spark-app
