--- a/.github/workflows/spark_app.yml
+++ b/.github/workflows/spark_app.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Copy custom code
       run: |
         # Copy code from custom_folder into the source folder
-        cp -r custom_folder/* src/
+        cp -r custom_folder/* code/
         
     - name: Set up Spark environment
       run: |
