--- a/.github/workflows/spark_app.yml
+++ b/.github/workflows/spark_app.yml
@@ -38,3 +38,7 @@ jobs:
       run: |
         # Use ArgoCD CLI or API to trigger deployment
         # Example: argocd app sync my-spark-app
+        curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+        sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
+        rm argocd-linux-amd64
+        argocd version
