--- a/k8s_deploy/statefulset-worker.yaml
+++ b/k8s_deploy/statefulset-worker.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: release-name-spark-worker
+  name: release-2-spark-worker
   namespace: "default"
   labels:
     app.kubernetes.io/name: spark
