--- a/.github/workflows/spark_app.yml
+++ b/.github/workflows/spark_app.yml
@@ -50,7 +50,7 @@ jobs:
     #     curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
     #     sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
     #     rm argocd-linux-amd64
-    #     argocd login 54.226.25.98:31218 --username admin --password SojWh5-NBGRCy69G --insecure
+    #     argocd login <argocd-IP> --username xxxxx --password xxxxx --insecure
     #     argocd app list
     #     argocd app sync spark
 
